# barkalot

./: CMakeLists.txt  README.md
docs/: DEVEL.md  SEEALSO.md
examples/: CMakeLists.txt  demo_baz.cpp
include/data_structure/linked_list/: DoublyLinkedList.h  SinglyLinkedList.h
include/data_structure/node/: Node.h
include/foo_lib/: addition.h  multiplication.h
scripts/: build  build-and-test  clean  test
src/: multiplication.cpp
src/data_structure/: CMakeLists.txt
src/data_structure/linked_list/: CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedListImpl.h  SinglyLinkedList.cpp  SinglyLinkedListImpl.h  doubly_linked_list.cpp
src/data_structure/node/: CMakeLists.txt  Node.cpp
tests/: CMakeLists.txt  test_addition.cpp  test_multiplication.cpp
tests/data_structure/: CMakeLists.txt
tests/data_structure/linked_list/: CMakeLists.txt  test_DoublyLinkedList.cpp  test_SinglyLinkedList.cpp
tests/data_structure/node/: CMakeLists.txt  test_Node.cpp
